--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 627cbf8
+	base = 6e7b86c
 	trimbase = 
 	parent = release/jade/rail_pick_and_place_tools
-	previous = 
+	previous = 627cbf8
