--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 608c697
+	base = 312aac5
 	trimbase = 
 	parent = rpm/jade/rail_pick_and_place
-	previous = 
+	previous = 608c697
