--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
 	base = 79190a2
-	trimbase = 0bdabc7
+	trimbase = 
 	parent = upstream
 	previous = 556a99c
