--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
-	base = 70a38ed
-	trimbase = 
+	base = d030242
+	trimbase = 70a38ed
 	parent = upstream
 	previous = 6138e91
