--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
-	base = e810765
-	trimbase = 
+	base = c0628b8
+	trimbase = e810765
 	parent = upstream
 	previous = 6138e91
