--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = 70b477b
-	trimbase = 
+	base = 7fee63b
+	trimbase = 70b477b
 	parent = upstream
 	previous = 6138e91
