--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
-	base = 885e726
-	trimbase = 
+	base = 2d5824f
+	trimbase = 885e726
 	parent = upstream
 	previous = fd04125
