--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = graspdb
-	base = dc16cf2
-	trimbase = 
+	base = 30c901a
+	trimbase = dc16cf2
 	parent = upstream
 	previous = fd04125
