--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
-	base = 29df8ba
-	trimbase = 
+	base = 144abd3
+	trimbase = 29df8ba
 	parent = upstream
 	previous = fd04125
