--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
-	base = c7f8c32
-	trimbase = 
+	base = 867a099
+	trimbase = c7f8c32
 	parent = upstream
 	previous = fd04125
