--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = da5e77f
-	trimbase = 
+	base = c5d285b
+	trimbase = da5e77f
 	parent = upstream
 	previous = fd04125
